--- a/resources/views/admin/user_profile.edge
+++ b/resources/views/admin/user_profile.edge
@@ -22,7 +22,7 @@
           class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Settings</a>
       </li>
       <li>
-        <form action="{{route('auth.logout')}}" method="POST">
+        <form action="{{route('admin.logout')}}" method="POST">
           {{ csrfField() }}
           <button type="submit"
             class="text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white w-full px-4 py-2 text-left">
