--- a/resources/views/components/aside_component.edge
+++ b/resources/views/components/aside_component.edge
@@ -1,8 +1,9 @@
 <li>
   <a href="{{redirect}}" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-     <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="{{viewBox}}">
-        <path d="{{path}}"/>
-     </svg>
+     @svg(path, {
+      width: 25,
+      height: 25,
+     })
      <span class="flex-1 ms-3 whitespace-nowrap">{{name}}</span>
      @if(pro)
      <span class="inline-flex items-center justify-center px-2 ms-3 text-sm font-medium text-gray-800 bg-gray-100 rounded-full dark:bg-gray-700 dark:text-gray-300">Pro</span>
