--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -1,6 +1,5 @@
 @eval(await auth.use('web').check())
 @let(defaultButtonText = auth.use('web').isAuthenticated ? 'Déconnexion' : 'Commencer')
-@let(redirectionButton = auth.use('web').isAuthenticated ? route('auth.logout') : route('auth.register'))
 
 <nav class="fixed top-0 z-50 w-full bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
@@ -12,7 +11,7 @@
     @include('admin/user_profile')
     @else
     <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-      <a href="{{buttonRedirection? buttonRedirection : redirectionButton}}">
+      <a href="{{buttonRedirection? buttonRedirection : route('auth.register')}}">
         <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 
           focus:ring-4 focus:outline-none focus:ring-blue-300 
           font-medium rounded-lg text-sm px-4 py-2 text-center 
