--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -19,7 +19,7 @@
     document.documentElement.classList.remove('dark');
   }
 </script>
-  <link rel="icon" href="/assets/favicon.png"  >
+  <link rel="icon" href="/favicon.png"  >
 </head>
 
 @include('partials/nav')
