ajout home page

--- a/resources/views/admin/aside_bar.edge
+++ b/resources/views/admin/aside_bar.edge
@@ -26,6 +26,11 @@
     </ul>
     <ul class="pt-4 mt-4 space-y-2 font-medium border-t border-gray-200 dark:border-gray-700">
       @!component('components/aside_component', {
+        redirect: route('admin.plantations'),
+        path: 'uil:map-marker-plus',
+        name: 'Plantes disponibles',
+        })
+      @!component('components/aside_component', {
         redirect: route('admin.settings'),
         path: 'uil:setting',
         name: 'Paramètres',
