--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -23,4 +23,4 @@
 </head>
 
 @include('partials/nav')
-<body class="dark:bg-gray-800 dark:text-white pt-20">
+<body class="dark:bg-gray-800 dark:text-white">
