--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -3,7 +3,7 @@
 
 <nav class="fixed top-0 z-50 w-full bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse w-180px" id="title">
       <button class="text-lg">🌱</button>
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Mon potager</span>
     </a>
@@ -29,9 +29,9 @@
       </button>
     </div>
     @end
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
+    <div class="flex items-center justify-center hidden w-full md:flex md:w-auto md:order-1" id="navbar-cta">
       <ul
-        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700 w-full">
         @!component('components/itemNav', { isSelected: home ? true : false, title: "Page d'accueil", link: "/" })
         @if(auth.use('web').isAuthenticated)
         @!component('components/itemNav', { isSelected: dashboard ? true : false, title: "Dashboard", link:
