video arriere plan home

--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -10,9 +10,9 @@
     @if(auth.use('web').isAuthenticated)
     @include('admin/user_profile')
     @else
-    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse ml-52px">
       <a href="{{buttonRedirection? buttonRedirection : route('auth.register')}}">
-        <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 
+        <button type="button" class="w-32 text-white bg-blue-700 hover:bg-blue-800 
           focus:ring-4 focus:outline-none focus:ring-blue-300 
           font-medium rounded-lg text-sm px-4 py-2 text-center 
           dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">{{buttonText? buttonText :
