--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -14,4 +14,10 @@
   @!component('components/button', { text: 'Créer votre compte' })
 </form>
 
+<div class="border-t-2 border-gray-300 max-w-sm mx-auto mt-5">
+  <p class="text-center mt-5">Vous avez déjà un compte ?
+  <a href="{{ route('auth.login') }}" class="text-blue-500 hover:text-blue-700">Se connecter</a>
+  </p>
+</div>
+
 @include('partials/footer')
