--- a/resources/views/auth/register.edge
+++ b/resources/views/auth/register.edge
@@ -10,6 +10,8 @@
   'abc@cde.fr', type: 'email' })
   @!component('components/input', { title: 'password', label: 'Indiquez votre mot de passe', required: true, type:
   'password'})
+  @!component('components/input', { title: 'password_confirmation', label: 'Confirmer le mot de passe', type:
+  'password'})
   @!component('components/input', { title: 'thumbnail', label: "Ajouter une photo de profil (optionel)", type: 'file'})
   @!component('components/button', { text: 'Créer votre compte' })
 </form>
