--- a/resources/views/partials/header.edge
+++ b/resources/views/partials/header.edge
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,20 +9,20 @@
   @vite(['resources/css/app.css', 'resources/js/app.js'])
 
   <script>
-  // It's best to inline this in `head` to avoid FOUC (flash of unstyled content) when changing pages or themes
-  if (
-    localStorage.getItem('color-theme') === 'dark' ||
-    (!('color-theme' in localStorage) &&
-      window.matchMedia('(prefers-color-scheme: dark)').matches)
-  ) {
-    document.documentElement.classList.add('dark');
-  } else {
-    document.documentElement.classList.remove('dark');
-  }
-</script>
-  <link rel="icon" href="/favicon.png"  >
+    // It's best to inline this in `head` to avoid FOUC (flash of unstyled content) when changing pages or themes
+    if (
+      localStorage.getItem('color-theme') === 'dark' ||
+      (!('color-theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+    ) {
+      document.documentElement.classList.add('dark')
+    } else {
+      document.documentElement.classList.remove('dark')
+    }
+  </script>
+  <link rel="icon" href="/favicon.png">
 </head>
 
 @include('partials/nav')
+
 <body class="dark:bg-gray-800 dark:text-white">
   <div class="w-full h-64px"></div>
