ajout monpotager accueil + unicité nom d'un potager pour un utilisateur

--- a/resources/views/admin/aside_bar.edge
+++ b/resources/views/admin/aside_bar.edge
@@ -9,7 +9,7 @@
       name: 'Dashboard',
       })
       @!component('components/aside_component', {
-      redirect: route('admin.monpotager'),
+      redirect: route('admin.monpotager.index'),
       path: 'uil:flower',
       name: 'Mon Potager',
       })
