--- a/resources/views/components/input.edge
+++ b/resources/views/components/input.edge
@@ -1,9 +1,10 @@
 @if(type == 'file')
-<div class="mb-5">
+<div class="m-5">
   <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="{{title}}">{{label}}</label>
   <input class="block w-full text-sm text-gray-900 border border-gray-300 
   rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none 
-  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" id="{{title}}" type="file" name="{{title}}" value="{{ old(title) || '' }}">
+  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" id="{{title}}" type="file" name="{{title}}"
+    value="{{ old(title) || '' }}">
 
   @inputError(title)
   @each(message in $messages)
@@ -11,6 +12,57 @@
   @end
   @end
 </div>
+@else
+@if(type == 'textarea')
+<div class="mb-5">
+  <label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{label}}</label>
+  <textarea id="{{title}}" name="{{title}}" rows="4" class="bg-gray-50
+      border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 
+      focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
+      dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" {{ placeholder?
+    `placeholder=${placeholder}` : '' }} {{ required? 'required' : '' }}>{{ old(title) || '' }}</textarea>
+
+  @inputError(title)
+  @each(message in $messages)
+  <p>{{ message }}</p>
+  @end
+  @end
+</div>
+@else
+@if(type == 'numberInput')
+<label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ label }}</label>
+<div class="relative flex items-center mb-5 my-2">
+  <button type="button" id="decrement-button" data-input-counter-decrement="{{title}}" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 
+    hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 
+    dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+    <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+      viewBox="0 0 18 2">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16" />
+    </svg>
+  </button>
+  <input type="text" id="{{title}}" data-input-counter data-input-counter-min="{{min}}" data-input-counter-max="{{max}}"'' name="{{title}}"
+    class="bg-gray-50 border-x-0 border-gray-300 h-11 font-medium text-center text-gray-900 text-sm focus:ring-blue-500 
+    focus:border-blue-500 block w-full pb-6 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
+    dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="" value="{{ old(title) || '5' }}" required />
+  <div
+    class="absolute bottom-1 start-1/2 -translate-x-1/2 rtl:translate-x-1/2 flex items-center text-xs text-gray-400 space-x-1 rtl:space-x-reverse">
+    @svg(svgIcon, 'h-2.5 w-2.5')
+    <span>{{ name }}</span>
+  </div>
+  <button type="button" id="increment-button" data-input-counter-increment="{{title}}"
+    class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border 
+    border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+    <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+      viewBox="0 0 18 18">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16" />
+    </svg>
+  </button>
+</div>
+@inputError(title)
+@each(message in $messages)
+<p>{{ message }}</p>
+@end
+@end
 @else
 <div class="mb-5">
   <label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{label}}</label>
@@ -26,4 +78,6 @@
   @end
   @end
 </div>
+@end
+@end
 @end
