--- a/resources/views/admin/monpotager/index.edge
+++ b/resources/views/admin/monpotager/index.edge
@@ -14,7 +14,7 @@
   <div class="w-full px-8 py-4">
     <a href="{{ route('admin.monpotager.create')}}" >
       <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
-       focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-
+       focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-5
        inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
         Ajouter un <span class="font-bold ml-1">potager</span>
         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2 mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -31,7 +31,19 @@
       @if(potager.description)
       <p class="text-white mt-2">{{potager.description}}</p>
       @end
-      <div class="flex justify-between items-center">
+      <div class="flex justify-between items-center m-4">
+        <a href="{{ route('admin.monpotager.show', {id: potager.id})}}">
+          <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
+           focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center
+           inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Y accéder
+            @svg('material-symbols:emoji-nature-outline', {
+              width: 20,
+              height: 20,
+              class: 'ml-2'
+            })
+          </button>
+        </a>
       </div>
     </div>
     @else
