ajout page modification plantes

--- a/resources/views/admin/aside_bar.edge
+++ b/resources/views/admin/aside_bar.edge
@@ -26,7 +26,7 @@
     </ul>
     <ul class="pt-4 mt-4 space-y-2 font-medium border-t border-gray-200 dark:border-gray-700">
       @!component('components/aside_component', {
-        redirect: route('admin.plantations'),
+        redirect: route('admin.plantes.index'),
         path: 'uil:map-marker-plus',
         name: 'Plantes disponibles',
         })
