--- a/resources/views/admin/monpotager/index.edge
+++ b/resources/views/admin/monpotager/index.edge
@@ -16,7 +16,7 @@
       <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
        focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-5
        inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        Ajouter un <span class="font-bold ml-1">potager</span>
+        Ajouter un <span class="font-bold ml-1">potager 👨‍🌾</span>
         <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2 mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
           fill="none" viewBox="0 0 14 10">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -49,7 +49,7 @@
     @else
     <div class="flex justify-center items-center h-64 w-full">
       <div class="text-center">
-        <p class="text-white py-10">Aucun potager pour le moment</p>
+        <p class="text-white py-10">Aucun potager pour le moment 😞</p>
       </div>
     </div>
     @if(idPotager)
