--- a/resources/views/admin/settings/index.edge
+++ b/resources/views/admin/settings/index.edge
@@ -3,13 +3,13 @@
 
 @include('partials/header')
 @include('admin/aside_bar')
-<div class="ml-64 p-10">
+<div class="sm:ml-64 p-10">
   @!component('components/breadcrumb', { breadcrumbs: {
   'Paramètres': false
   }
   })
 </div>
-<div class="ml-64 px-10 pb-10">
+<div class="sm:ml-64 px-10 pb-10">
   <section name="thèmes" class="pb-2">
     <p class="text-2xl font-bold mb-4 pb-4">Thèmes</p>
     <button id="theme-toggle" type="button"
