--- a/resources/views/partials/nav.edge
+++ b/resources/views/partials/nav.edge
@@ -3,14 +3,14 @@
 
 <nav class="fixed top-0 z-50 w-full bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse w-180px" id="title">
+    <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse md:w-180px" id="title">
       <button class="text-lg">🌱</button>
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Mon potager</span>
     </a>
     @if(auth.use('web').isAuthenticated)
     @include('admin/user_profile')
     @else
-    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse ml-52px">
+    <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse md:ml-52px">
       <a href="{{buttonRedirection? buttonRedirection : route('auth.register')}}">
         <button type="button" class="w-32 text-white bg-blue-700 hover:bg-blue-800 
           focus:ring-4 focus:outline-none focus:ring-blue-300 
