--- a/resources/views/admin/settings/index.edge
+++ b/resources/views/admin/settings/index.edge
@@ -41,7 +41,7 @@
       'password'})
       @!component('components/input', { title: 'password_confirmation', label: 'Confirmer le mot de passe', type:
       'password'})
-      @!component('components/input', { title: 'thumbnail', label: "Photo de profil (optionel)", type: 'file'})
+      @!component('components/input', { title: 'thumbnail', label: "Photo de profil", type: 'file'})
       @!component('components/button', { text: 'Modifier les informations' })
     </form>
   </section>
