--- a/resources/views/admin/demandes/index.edge
+++ b/resources/views/admin/demandes/index.edge
@@ -28,14 +28,14 @@
         </div>
       </div>
       <div class="text-center">
-        <p class="text-gray-200">{{ demandeRecue.updated_at }}</p>
-        <p class="text-gray-300">Concernant {{ demandeRecue.field }}</p>
+        <p class="dark:text-gray-200 text-gray-500">{{ demandeRecue.updated_at }}</p>
+        <p class="dark:text-gray-300 text-gray-700">Concernant {{ demandeRecue.field }}</p>
       </div>
 
       @if(demandeRecue.field !== 'icon')
       <div class="text-center">
-        <p class="text-gray-200">Ancienne valeur : {{ demandeRecue.old_value }} </p>
-        <p class="text-gray-300">Nouvelle valeur : {{ demandeRecue.new_value }}</p>
+        <p class="dark:text-gray-200 text-gray-500">Ancienne valeur : {{ demandeRecue.old_value }} </p>
+        <p class="dark:text-gray-300 text-gray-700">Nouvelle valeur : {{ demandeRecue.new_value }}</p>
       </div>
       @else
       <div class="text-center">
@@ -59,7 +59,7 @@
           <button type="submit">Refuser</button>
         </form>
         @else
-        <p class="text-gray-200">{{ demandeRecue.status === 1 ? 'Acceptée' : 'Refusée' }}</p>
+        <p class="dark:text-gray-200 text-gray-500">{{ demandeRecue.status === 1 ? 'Acceptée' : 'Refusée' }}</p>
         <form action="" method="post">
           {{ csrfField() }}
           <input type="hidden" name="id" value="{{ demandeRecue.id }}">
@@ -73,7 +73,7 @@
     @else
     <div class="flex justify-center items-center w-full">
       <div class="text-center">
-        <p class="text-white">Aucune demande reçue pour le moment 👌</p>
+        <p class="dark:text-white">Aucune demande reçue pour le moment 👌</p>
       </div>
     </div>
     @end
@@ -97,14 +97,14 @@
         </div>
       </div>
       <div class="text-center">
-        <p class="text-gray-200">{{ demandeEnvoyee.updated_at }}</p>
-        <p class="text-gray-300">Concernant {{ demandeEnvoyee.field }}</p>
+        <p class="dark:text-gray-200 text-gray-500">{{ demandeEnvoyee.updated_at }}</p>
+        <p class="dark:text-gray-300 text-gray-700">Concernant {{ demandeEnvoyee.field }}</p>
       </div>
 
       @if(demandeEnvoyee.field !== 'icon')
       <div class="text-center">
-        <p class="text-gray-200">Ancienne valeur : {{ demandeEnvoyee.old_value }} </p>
-        <p class="text-gray-300">Nouvelle valeur : {{ demandeEnvoyee.new_value }}</p>
+        <p class="dark:text-gray-200 text-gray-500">Ancienne valeur : {{ demandeEnvoyee.old_value }} </p>
+        <p class="dark:text-gray-300 text-gray-700">Nouvelle valeur : {{ demandeEnvoyee.new_value }}</p>
       </div>
       @else
       <div class="text-center">
@@ -115,7 +115,7 @@
 
       <div class="text-center">
         @if(demandeEnvoyee.status==0)
-        <p class="text-gray-200">En attente</p>
+        <p class="dark:text-gray-200 text-gray-500">En attente</p>
         <form action="" method="post">
           {{ csrfField() }}
           <input type="hidden" name="id" value="{{ demandeEnvoyee.id }}">
@@ -123,7 +123,7 @@
           <button type="submit" class="font-bold">Masquer</button>
         </form>
         @else
-        <p class="text-gray-200">{{ demandeEnvoyee.status === 1 ? 'Acceptée' : 'Refusée' }}</p>
+        <p class="dark:text-gray-200 text-gray-500">{{ demandeEnvoyee.status === 1 ? 'Acceptée' : 'Refusée' }}</p>
         <form action="" method="post">
           {{ csrfField() }}
           <input type="hidden" name="id" value="{{ demandeEnvoyee.id }}">
@@ -137,7 +137,7 @@
     @else
     <div class="flex justify-center items-center w-full">
       <div class="text-center">
-        <p class="text-white">Aucune demande envoyé pour le moment 👌</p>
+        <p class="dark:text-white">Aucune demande envoyé pour le moment 👌</p>
       </div>
     </div>
   </div>
