--- a/resources/views/admin/monpotager/index.edge
+++ b/resources/views/admin/monpotager/index.edge
@@ -27,9 +27,9 @@
     @end
     @each(potager in idPotager)
     <div>
-      <p class="text-2xl font-bold text-white">{{potager.name}}</p>
+      <p class="text-2xl font-bold dark:text-white">{{potager.name}}</p>
       @if(potager.description)
-      <p class="text-white mt-2">{{potager.description}}</p>
+      <p class="dark:text-white mt-2">{{potager.description}}</p>
       @end
       <div class="flex justify-between items-center m-4">
         <a href="{{ route('admin.monpotager.show', {id: potager.id})}}">
@@ -49,7 +49,7 @@
     @else
     <div class="flex justify-center items-center h-64 w-full">
       <div class="text-center">
-        <p class="text-white py-10">Aucun potager pour le moment 😞</p>
+        <p class="dark:text-white py-10">Aucun potager pour le moment 😞</p>
       </div>
     </div>
     @if(idPotager)
