--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -2,7 +2,7 @@
 @let(home=true)
 
 @include('partials/header')
-<div class="relative">
+<div class="relative h-screenH">
     <video autoplay muted loop class="w-full h-screenH object-cover">
         <source src="assets/video-bg-1080.mp4" type="video/mp4">
         Votre navigateur ne supporte pas la balise vidéo.
