--- a/resources/views/auth/login.edge
+++ b/resources/views/auth/login.edge
@@ -11,6 +11,9 @@
 </form>
 
 <div class="border-t-2 border-gray-300 max-w-sm mx-auto mt-5">
+  @if(errors)
+  <p class="text-red-500 text-center mt-5">Identifiants incorrects</p>
+  @end
   <p class="text-center mt-5">Vous n'avez pas de compte ?
      <a href="{{ route('auth.register') }}" class="text-blue-500 hover:text-blue-700">Inscrivez-vous</a></p>
 </div>
