--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -4,7 +4,7 @@
 @include('partials/header')
 <div class="relative h-screenH">
     <video autoplay muted loop class="w-full h-screenH object-cover">
-        <source src="assets/video-bg-1080.mp4" type="video/mp4">
+        <source src="assets/video-bg-720p.mp4" type="video/mp4">
         Votre navigateur ne supporte pas la balise vidéo.
     </video>
 
