--- a/resources/views/admin/monpotager/index.edge
+++ b/resources/views/admin/monpotager/index.edge
@@ -12,7 +12,7 @@
   </div>
   @if(idPotager)
   <div class="w-full px-8 py-4">
-    <a href="{{ route('admin.monpotager.create')}}" >
+    <a href="{{ route('admin.monpotager.create')}}">
       <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
        focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-5
        inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
@@ -26,21 +26,23 @@
     </a>
     @end
     @each(potager in idPotager)
-    <div>
-      <p class="text-2xl font-bold dark:text-white">{{potager.name}}</p>
-      @if(potager.description)
-      <p class="dark:text-white mt-2">{{potager.description}}</p>
-      @end
+    <div class="flex items-center my-5">
+      <div class="md:w-1/4 w-1/2">
+        <p class="text-2xl font-bold dark:text-white">{{potager.name}}</p>
+        @if(potager.description)
+        <p class="dark:text-white mt-2">{{potager.description}}</p>
+        @end
+      </div>
       <div class="flex justify-between items-center m-4">
         <a href="{{ route('admin.monpotager.show', {id: potager.id})}}">
           <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
-           focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center
+           focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mt-1
            inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
             Y accéder
             @svg('material-symbols:emoji-nature-outline', {
-              width: 20,
-              height: 20,
-              class: 'ml-2'
+            width: 20,
+            height: 20,
+            class: 'ml-2'
             })
           </button>
         </a>
