--- a/resources/views/admin/monpotager/index.edge
+++ b/resources/views/admin/monpotager/index.edge
@@ -34,7 +34,7 @@
         @end
       </div>
       <div class="flex justify-between items-center m-4">
-        <a href="{{ route('admin.monpotager.show', {id: potager.id})}}">
+        <a href="{{ route('admin.monpotager.show', {idPotager: potager.id})}}">
           <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
            focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mt-1
            inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
