--- a/resources/views/admin/monpotager/show.edge
+++ b/resources/views/admin/monpotager/show.edge
@@ -13,14 +13,33 @@
   </div>
   <div class="p-10">
     <h1 class="text-3xl font-bold">{{ potager.name }}</h1>
+    <p class="text-gray-500 my-5">{{ potager.description }}</p>
 
-    <form action="{{ route('admin.monpotager.delete', {id: potager.id})}}" method="post" class="">
+    <a href="{{ route('admin.monpotager.plantations.create', { idPotager: potager.id})}}">
+      <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
+       focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-5
+       inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+        Ajouter une <span class="font-bold ml-1">plantation 👨‍🌾</span>
+        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2 mt-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+          fill="none" viewBox="0 0 14 10">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M1 5h12m0 0L9 1m4 4L9 9" />
+        </svg>
+      </button>
+    </a>
+    @each(plantation in plantations)
+
+    @else
+    <div class="flex items-center justify-center my-8">
+      <p class="text-gray-500">Aucune plantation pour le moment</p>
+    </div>
+    @end
+    <form action="{{ route('admin.monpotager.delete', {idPotager: potager.id})}}" method="post" class="">
       {{ csrfField() }}
       <label class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none
       focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-5 cursor-pointer
       inline-flex items-center dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-800">
-        <input type="submit" class="cursor-pointer"
-          value="Supprimer le potager" />
+        <input type="submit" class="cursor-pointer" value="Supprimer le potager" />
 
         @svg('material-symbols:delete', {
         width: 20,
