--- a/resources/views/components/input.edge
+++ b/resources/views/components/input.edge
@@ -5,46 +5,32 @@
   rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none 
   dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" id="{{title}}" type="file" name="{{title}}"
     value="{{ old(title) || '' }}">
-
-  @inputError(title)
-  @each(message in $messages)
-  <p>{{ message }}</p>
   @end
-  @end
-</div>
-@else
 @if(type == 'textarea')
 <div class="my-5">
   <label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{label}}</label>
   <textarea id="{{title}}" name="{{title}}" rows="4" class="{{ resize? 'resize-none' : '' }} bg-gray-50
-      border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 
-      focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
-      dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
-      " {{ placeholder? `placeholder=${placeholder}` : '' }} {{ required? 'required' : ''
+    border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 
+    focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
+    dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500
+    " {{ placeholder? `placeholder=${placeholder}` : '' }} {{ required? 'required' : ''
     }}>{{ old(title) || '' }}</textarea>
-
-  @inputError(title)
-  @each(message in $messages)
-  <p>{{ message }}</p>
   @end
-  @end
-</div>
-@else
 @if(type == 'numberInput')
 <label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ label }}</label>
 <div class="relative flex items-center mb-5 my-2">
   <button type="button" id="decrement-button" data-input-counter-decrement="{{title}}" class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 
-    hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 
-    dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
-    <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-      viewBox="0 0 18 2">
+hover:bg-gray-200 border border-gray-300 rounded-s-lg p-3 h-11 focus:ring-gray-100 
+dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+    <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+      fill="none" viewBox="0 0 18 2">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h16" />
     </svg>
   </button>
   <input type="text" id="{{title}}" data-input-counter data-input-counter-min="{{min}}"
     data-input-counter-max="{{max}}"'' name="{{title}}" class="bg-gray-50 border-x-0 border-gray-300 h-11 font-medium text-center text-gray-900 text-sm focus:ring-blue-500 
-    focus:border-blue-500 block w-full pb-6 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
-    dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder=""
+focus:border-blue-500 block w-full pb-6 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
+dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder=""
     value="{{ value? value : old(title) || value || '5' }}" required />
   <div
     class="absolute bottom-1 start-1/2 -translate-x-1/2 rtl:translate-x-1/2 flex items-center text-xs text-gray-400 space-x-1 rtl:space-x-reverse">
@@ -53,33 +39,38 @@
   </div>
   <button type="button" id="increment-button" data-input-counter-increment="{{title}}"
     class="bg-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:border-gray-600 hover:bg-gray-200 border 
-    border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
-    <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
-      viewBox="0 0 18 18">
-      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 1v16M1 9h16" />
+  border-gray-300 rounded-e-lg p-3 h-11 focus:ring-gray-100 dark:focus:ring-gray-700 focus:ring-2 focus:outline-none">
+    <svg class="w-3 h-3 text-gray-900 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+      fill="none" viewBox="0 0 18 18">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M9 1v16M1 9h16" />
     </svg>
   </button>
-</div>
-@inputError(title)
-@each(message in $messages)
-<p>{{ message }}</p>
 @end
+@if(type == 'select')
+<div class="my-5">
+  <label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{label}}</label>
+  <select id="{{title}}" name="{{title}}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg 
+  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
+  dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" {{ required? 'required' : '' }}>
+    @each(option in options)
+    <option value="{{option}}" {{ option == old(title)? 'selected' : '' }}>{{ option }}</option>
+    @end
+  </select>
+  
 @end
-@else
+@if(type == 'text' || type == 'email' || type == 'password' || !type)
 <div class="my-5">
   <label for="{{title}}" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{label}}</label>
   <input type="{{type || " texte"}}" id="{{title}}" name="{{title}}" value="{{ old(title) || '' }}" class="bg-gray-50 border border-gray-300 text-gray-900 
-    text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 
-    block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
-    dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" {{ placeholder?
+  text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 
+  block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 
+dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" {{ placeholder?
     `placeholder=${placeholder}` : '' }} {{ required? 'required' : '' }} />
-
+  @end
   @inputError(title)
   @each(message in $messages)
   <p>{{ message }}</p>
   @end
   @end
 </div>
-@end
-@end
-@end
