--- a/resources/views/admin/monpotager/show.edge
+++ b/resources/views/admin/monpotager/show.edge
@@ -14,7 +14,37 @@
   <div class="p-10">
     <h1 class="text-3xl font-bold">{{ potager.name }}</h1>
     <p class="text-gray-500 my-5">{{ potager.description }}</p>
-
+    @each(plantation in plantations)
+    <a href="">
+      <button class="mt-4 border-solid border-white border rounded-lg w-full h-min my-8 py-2 hover:bg-gray-900 delay-75 transition-colors">
+        <div class="flex items-center">
+          <div class="flex items-center w-1/3">
+            <div class="ms-5">
+              <h2 class="text-xl font-bold">{{ plantation.name }}</h2>
+              <div class="flex">
+                <img src="{{ plantation.icon }}" alt="{{ plantation.name }}" class="w-8 h-8 rounded-lg mr-2" />
+                <span class="text-gray-400 mt-1 font-bold">{{ plantation.plantename }}</span>
+              </div>
+            </div>
+          </div>
+          <div class="text-center w-1/3">
+            <p>À récolter le {{ plantation.recolte }}</p>
+          </div>
+          <div class="w-1/3 text-right">
+            @if(plantation.state === 0)
+            <p class="text-red-500 mr-5">A arroser</p>
+            @else
+            <p class="text-blue-500 mr-5">Arrosé !</p>
+            @end
+          </div>
+        </div>
+      </button>
+    </a>
+    @else
+    <div class="flex items-center justify-center my-8">
+      <p class="text-gray-500">Aucune plantation pour le moment</p>
+    </div>
+    @end
     <a href="{{ route('admin.monpotager.plantations.create', { idPotager: potager.id})}}">
       <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none
        focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-5
@@ -27,13 +57,6 @@
         </svg>
       </button>
     </a>
-    @each(plantation in plantations)
-
-    @else
-    <div class="flex items-center justify-center my-8">
-      <p class="text-gray-500">Aucune plantation pour le moment</p>
-    </div>
-    @end
     <form action="{{ route('admin.monpotager.delete', {idPotager: potager.id})}}" method="post" class="">
       {{ csrfField() }}
       <label class="text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none
