--- a/resources/views/admin/monpotager/show.edge
+++ b/resources/views/admin/monpotager/show.edge
@@ -15,8 +15,21 @@
     <h1 class="text-3xl font-bold">{{ potager.name }}</h1>
     <p class="text-gray-500 my-5">{{ potager.description }}</p>
     @each(plantation in plantations)
-    <a href="">
-      <button class="mt-4 border-solid border-white border rounded-lg w-full h-min my-8 py-2 hover:bg-gray-900 delay-75 transition-colors">
+    <a href="{{ route('admin.monpotager.plantations.show', {
+    idPotager: potager.id,
+    idPlantation: plantation.id
+    }) }}">
+      <button class="mt-4 border-solid 
+        @if(plantation.state === 1)
+        border-red-500
+        @else
+          @if(plantation.state === 2)
+            border-green-500
+          @else
+            border-white
+          @end
+        @end
+        border rounded-lg w-full h-min my-8 py-2 hover:bg-gray-900 delay-75 transition-colors">
         <div class="flex items-center">
           <div class="flex items-center w-1/3">
             <div class="ms-5">
@@ -31,8 +44,8 @@
             <p>À récolter le {{ plantation.recolte }}</p>
           </div>
           <div class="w-1/3 text-right">
-            @if(plantation.state === 0)
-            <p class="text-red-500 mr-5">A arroser</p>
+            @if(plantation.state === 1)
+            <p class="text-red-500 mr-5">À arroser</p>
             @else
             <p class="text-blue-500 mr-5">Arrosé !</p>
             @end
